# rag-intelligence

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.mlflow  Dockerfile.train  Makefile  README.md  docker-compose.yml  pyproject.toml  resume-pipeline.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: project-overview.md
docs/diagrams/: README.md
docs/pipeline/: 01-bronze.md  02-silver.md  03-gold.md  04-ml-training.md  05-architecture.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: dev-tools.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/sessions/: route.ts
frontend/src/app/api/sessions/[id]/: route.ts
frontend/src/app/api/sessions/[id]/messages/: route.ts
frontend/src/components/ai-elements/: message.tsx  prompt-input.tsx  reasoning.tsx
frontend/src/components/chat/: chat-app.tsx  chat-composer.tsx  chat-empty-state.tsx  chat-message-list.tsx  chat-sidebar.tsx  message-part-renderer.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: use-chat-sessions.ts
frontend/src/lib/: chat-models.ts  chat-provider.ts  chat-session-api.ts  chat-session-store.ts  chat-sessions.ts  db.ts  live-chat-transport.ts
infra/: otel-collector.yaml
notebooks/: 2_predict_next_round_winner.ipynb
src/rag_intelligence/: __init__.py  __main__.py  cli.py  config.py  db.py  document_cli.py  documents.py  embed_docs_cli.py  embedding_cli.py  embeddings.py  embeddings_manifest.py  embeddings_pipeline.py  embeddings_storage.py  gold.py  gold_cli.py  ingest.py  lexical_retrieval.py  logging.py  metadata.py  minio_utils.py  providers.py  rag.py  retrieval.py  round_winner.py  round_winner_cli.py  run_audit_cli.py  search_cli.py  settings.py  silver.py  silver_cli.py  telemetry.py  train_cli.py  training_metadata.py
src/rag_intelligence/api/: __init__.py  deps.py  main.py  middleware.py
src/rag_intelligence/api/routes/: rag.py  search.py
tests/: conftest.py  test_config.py  test_db.py  test_documents.py  test_embeddings.py  test_gold.py  test_health.py  test_ingest.py  test_logging.py  test_metadata.py  test_middleware.py  test_minio_utils.py  test_providers.py  test_rag.py  test_rag_endpoint.py  test_retrieval.py  test_round_winner.py  test_run_audit_cli.py  test_run_registration_clis.py  test_search_cli.py  test_search_endpoint.py  test_settings.py  test_silver.py  test_telemetry.py  test_training_metadata.py
