[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-intelligence"
version = "0.1.0"
description = "CS:GO Analytics AI — RAG pipeline with LlamaIndex, FastAPI, and pgvectorscale."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "kaggle>=1.7.4.5",
  "minio>=7.2.18",
  "python-dotenv>=1.1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "llama-index-core>=0.14",
  "llama-index-vector-stores-postgres>=0.7",
  "llama-index-llms-openai>=0.6",
  "llama-index-llms-anthropic>=0.10",
  "llama-index-llms-ollama>=0.9",
  "llama-index-embeddings-openai>=0.5",
  "llama-index-embeddings-ollama>=0.8",
  "llama-index-embeddings-voyageai>=0.5",
  "asyncpg>=0.31",
  "sqlalchemy[asyncio]>=2.0",
  "pgvector>=0.4",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[project.scripts]
bronze-import = "rag_intelligence.cli:main"
rag-api = "rag_intelligence.api.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
